setup for frontend routes

--- a/src/main/resources/templates/landing-page.hbs
+++ b/src/main/resources/templates/landing-page.hbs
@@ -1,3 +1,14 @@
-<h1 class="text-primary">Landing page works</h1>
+
+{{#partial"content"}}
+<h2 class="text-primary">Welcome</h2>
+<p>In a world of chaos and strife, there is always need for super heroes:</p>
+<h6>Specials people for special tasks.</h6>
+
+<p>Enlist our superhero squad or recruit your own </p>
+<a href="/hero-squad">
+    <h3>Hero Squad</h3>
+</a>
+
+{{/partial}}
 
 {{> layout.hbs}}
