--- a/src/main/resources/templates/hero-squad.hbs
+++ b/src/main/resources/templates/hero-squad.hbs
@@ -1,1 +1,37 @@
+
+{{#partial "content"}}
+    <h2>Hero Squad</h2>
+    <div class="row">
+
+        {{!-- List Available Hero squads  --}}
+        <div class="col md-6">
+
+        </div>
+
+        {{!-- Enter new squad  --}}
+        <div class="col md-6">
+            <form action="new-hero-squad" method="post">
+                <h3>New squad</h3>
+                <div class="form-field">
+                    <label for="new-squad-name" class="form-label">Name</label>
+                    <input type="text" name="new-squad-name" id="new-squad-name" class="form-control">
+                </div>
+
+                <div class="form-field">
+                    <label for="new-squad-cause" class="form-label">Cause</label>
+                    <input type="text" name="new-squad-cause" id="new-squad-cause" class="form-control" placeholder="ex. Fight sexism">
+                </div>
+
+                <div class="form-field">
+                    <label for="new-squad-maxSize" class="form-label">Number of Heroes (Max.)</label>
+                    <input type="number" name="new-squad-maxSize" id="new-squad-maxSize" class="form-control">
+                </div>
+                 <input type="submit" value="Enter">
+            </form>
+        </div>
+    </div>
+
+{{/partial}}
+
+
 {{> layout.hbs}}
