--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="/css/layout.css" rel="stylesheet">
     <title>Hero-Squad</title>
 </head>
 <body>
 
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+ <nav class="navbar navbar-expand-lg ">
      <div class="container-fluid">
          <a class="navbar-brand" href="#">Hero-Squad</a>
          <div class="collapse navbar-collapse">
              <ul class="navbar-nav ms-5 me-auto mb-2 mb-lg-0">
                  <li class="nav-item">
-                     <a class="nav-link active" aria-current="page" href="#">Home</a>
+                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link active" href="#">Heroes Page</a>
+                     <a class="nav-link active" href="/hero-squad">Heroes Page</a>
                  </li>
              </ul>
          </div>
