hero-squad page works and redirect to hero-squad-detail page

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -11,22 +11,23 @@
 </head>
 <body>
 
- <nav class="navbar navbar-expand-lg ">
-     <div class="container-fluid">
-         <a class="navbar-brand" href="#">Hero-Squad</a>
-         <div class="collapse navbar-collapse">
-             <ul class="navbar-nav ms-5 me-auto mb-2 mb-lg-0">
-                 <li class="nav-item">
-                     <a class="nav-link active" aria-current="page" href="/">Home</a>
-                 </li>
-                 <li class="nav-item">
-                     <a class="nav-link active" href="/hero-squad">Heroes Page</a>
-                 </li>
-             </ul>
+     <nav class="navbar navbar-expand-lg ">
+         <div class="container-fluid">
+             <a class="navbar-brand" href="#">Hero-Squad</a>
+             <div class="collapse navbar-collapse">
+                 <ul class="navbar-nav ms-5 me-auto mb-2 mb-lg-0">
+                     <li class="nav-item">
+                         <a class="nav-link active" aria-current="page" href="/">Home</a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link active" href="/hero-squad">Heroes Page</a>
+                     </li>
+                 </ul>
+             </div>
          </div>
+     </nav>
+     <div class="p-5">
+        {{#block "content"}}{{/block}}
      </div>
- </nav>
-
-    {{#block "content"}}{{/block}}
 </body>
 </html>
