--- a/src/main/resources/templates/hero-squad.hbs
+++ b/src/main/resources/templates/hero-squad.hbs
@@ -3,28 +3,42 @@
     <h2>Hero Squad</h2>
     <div class="row">
 
+        <div class="col-md-6 p-2">
         {{!-- List Available Hero squads  --}}
-        <div class="col md-6">
+
+        {{#if squads}}
+            {{#each squads}}
+                <div class="card p-3 ps-4">
+                    <h5>Squad-Name: {{name}}</h5>
+                    <p>MISSION: {{cause}}</p>
+                    <a href="hero-squad/{{id}}">
+                        <p>Details</p>
+                    </a>
+                </div>
+            {{/each}}
+        {{else}}
+            <p>No hero squad.Add one!</p>
+        {{/if}}
 
         </div>
 
         {{!-- Enter new squad  --}}
-        <div class="col md-6">
+        <div class="col-md-6 pe-5">
             <form action="new-hero-squad" method="post">
                 <h3>New squad</h3>
                 <div class="form-field">
                     <label for="new-squad-name" class="form-label">Name</label>
-                    <input type="text" name="new-squad-name" id="new-squad-name" class="form-control">
+                    <input type="text" name="new-squad-name" id="new-squad-name" class="form-control" required>
                 </div>
 
                 <div class="form-field">
                     <label for="new-squad-cause" class="form-label">Cause</label>
-                    <input type="text" name="new-squad-cause" id="new-squad-cause" class="form-control" placeholder="ex. Fight sexism">
+                    <input type="text" name="new-squad-cause" id="new-squad-cause" class="form-control" placeholder="ex. Fight sexism" required>
                 </div>
 
                 <div class="form-field">
                     <label for="new-squad-maxSize" class="form-label">Number of Heroes (Max.)</label>
-                    <input type="number" name="new-squad-maxSize" id="new-squad-maxSize" class="form-control">
+                    <input type="number" name="new-squad-maxSize" id="new-squad-maxSize" class="form-control" required>
                 </div>
                  <input type="submit" value="Enter">
             </form>
