--- a/src/main/resources/templates/landing-page.hbs
+++ b/src/main/resources/templates/landing-page.hbs
@@ -1,13 +1,21 @@
 
 {{#partial"content"}}
-<h2 class="text-primary">Welcome</h2>
-<p>In a world of chaos and strife, there is always need for super heroes:</p>
-<h6>Specials people for special tasks.</h6>
+    <div class="landing-page-container d-flex flex-column justify-content-around align-items-center">
+        <h2 class="text-light" style="font-size: 60px;">Welcome</h2>
 
-<p>Enlist our superhero squad or recruit your own </p>
-<a href="/hero-squad">
-    <h3>Hero Squad</h3>
-</a>
+        <div class="intro text-primary opacity-75" style="color:#3fc301;">
+            <p>In a world of chaos and strife, there is always need for super heroes:</p>
+
+            <h5>Specials people for special tasks.</h5>
+
+            <p>Enlist our superhero squad or recruit your own </p>
+            <a class="btn btn-primary text-light rounded-circle" href="/hero-squad">
+                <h3>checkout Hero Squad</h3>
+            </a>
+
+        </div>
+
+    </div>
 
 {{/partial}}
 
