--- a/src/main/resources/public/css/layout.css
+++ b/src/main/resources/public/css/layout.css
@@ -1,6 +1,44 @@
+
+body {
+       background-color: cornflowerblue;
+       background-image:url(/images/super-hero-background.jpg);
+       background-size: cover;
+       background-repeat: no-repeat;
+       height: 100%;
+}
 .navbar {
-    background-color:  blue;
+    position: sticky;
+    top:0;
+    border-bottom: 1px solid green;
+    background: #8e9fa7;
+
 }
 .nav-link {
     color: white;
 }
+
+.hero-squad-detail{
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 40px;
+    color: blueviolet;
+   }
+
+   .landing-page-container {
+       padding: 2rem;
+       margin-left: 1rem;
+       margin-right: 1rem;
+       color: white;
+       font-size: 36px;
+       text-align:center;
+       height: 100vh;
+   }
+
+   .form-field {
+        padding: .5rem;
+   }
+
