--- a/src/main/resources/templates/hero-squad.hbs
+++ b/src/main/resources/templates/hero-squad.hbs
@@ -1,49 +1,65 @@
 
 {{#partial "content"}}
-    <h2>Hero Squad</h2>
+
     <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-8">
+            <h2 class="text-light">Hero Squad</h2>
+            <div class="row">
+                <div class="col-md-1"></div>
 
-        <div class="col-md-6 p-2">
-        {{!-- List Available Hero squads  --}}
+                <div class="col-md-5 p-2 overflow-auto" style="height:90vh;">
+                    {{!-- List Available Hero squads --}}
 
-        {{#if squads}}
-            {{#each squads}}
-                <div class="card p-3 ps-4">
-                    <h5>Squad-Name: {{name}}</h5>
-                    <p>MISSION: {{cause}}</p>
-                    <a href="hero-squad/{{id}}">
-                        <p>Details</p>
-                    </a>
+                    {{#if squads}}
+                    {{#each squads}}
+                    <div class="card p-3 ps-4">
+                        <h5>Squad-Name: {{name}}</h5>
+                        <p>MISSION: {{cause}}</p>
+                        <a class="hero-squad-detail" href="hero-squad/{{id}}">
+                            <div><span class="material-icons"> expand_more </span></div>
+                            <p>Details</p>
+                        </a>
+                    </div>
+                    {{/each}}
+                    {{else}}
+                    <p>No hero squad.Add one!</p>
+                    {{/if}}
+
                 </div>
-            {{/each}}
-        {{else}}
-            <p>No hero squad.Add one!</p>
-        {{/if}}
+                <div class="col-md-1"></div>
+
+                {{!-- Enter new squad --}}
+                <div class="col-md-4 pe-5 bg-light m-2 opacity-75">
+                    <form action="new-hero-squad" method="post" class="form form-inline">
+                        <h4 class="mt-3">Enter new Hero squad category</h3>
+                            <div class="form-field">
+                                <label for="new-squad-name" class="form-label">Name</label>
+                                <input type="text" name="new-squad-name" id="new-squad-name" class="form-control" required>
+                            </div>
+
+                            <div class="form-field">
+                                <label for="new-squad-cause" class="form-label">Cause</label>
+                                <input type="text" name="new-squad-cause" id="new-squad-cause" class="form-control"
+                                    placeholder="ex. Fight sexism" required>
+                            </div>
+
+                            <div class="form-field">
+                                <label for="new-squad-maxSize" class="form-label">Number of Heroes (Max.)</label>
+                                <input type="number" name="new-squad-maxSize" id="new-squad-maxSize" class="form-control"
+                                    required>
+                            </div>
+
+                            <input class="form-control" type="submit" value="Enter"
+                            style="background-color: blueviolet;color:white;font-size:20px;">
+                    </form>
+                </div>
+            </div>
 
         </div>
-
-        {{!-- Enter new squad  --}}
-        <div class="col-md-6 pe-5">
-            <form action="new-hero-squad" method="post">
-                <h3>New squad</h3>
-                <div class="form-field">
-                    <label for="new-squad-name" class="form-label">Name</label>
-                    <input type="text" name="new-squad-name" id="new-squad-name" class="form-control" required>
-                </div>
-
-                <div class="form-field">
-                    <label for="new-squad-cause" class="form-label">Cause</label>
-                    <input type="text" name="new-squad-cause" id="new-squad-cause" class="form-control" placeholder="ex. Fight sexism" required>
-                </div>
-
-                <div class="form-field">
-                    <label for="new-squad-maxSize" class="form-label">Number of Heroes (Max.)</label>
-                    <input type="number" name="new-squad-maxSize" id="new-squad-maxSize" class="form-control" required>
-                </div>
-                 <input type="submit" value="Enter">
-            </form>
-        </div>
+        <div class="col-md-1"></div>
     </div>
+
 
 {{/partial}}
 
