--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="/css/layout.css" rel="stylesheet">
     <title>Hero-Squad</title>
 </head>
@@ -13,7 +14,7 @@
 
      <nav class="navbar navbar-expand-lg ">
          <div class="container-fluid">
-             <a class="navbar-brand" href="#">Hero-Squad</a>
+             <a class="navbar-brand" href="" style="font-style:bold;font-size:20px;">HERO-SQUAD</a>
              <div class="collapse navbar-collapse">
                  <ul class="navbar-nav ms-5 me-auto mb-2 mb-lg-0">
                      <li class="nav-item">
