--- a/src/main/resources/templates/new-hero-form.hbs
+++ b/src/main/resources/templates/new-hero-form.hbs
@@ -1,28 +1,43 @@
 
 {{#partial "content"}}
-    <h2>New Squad</h2>
-    <form action="/hero-squad/add-hero-form" method="POST">
-        <div class="form-field">
-            <label class="form-label" for="hero-name">Hero Name</label>
-            <input type="text" id="hero-name" name="hero-name" required class="form-control">
-        </div>
-        <div class="form-field">
-            <label class="form-label" for="hero-age">Age (Years)</label>
-            <input type="number" id="hero-age" name="hero-age" required class="form-control" placeholder="Age of the hero">
-        </div>
-        <div class="form-field">
-            <label class="form-label" for="hero-power">Power</label>
-            <input type="text" id="hero-power" name="hero-power" required class="form-control" placeholder="Strength of the hero">
-        </div>
-        <div class="form-field">
-            <label class="form-label" for="hero-weakness">Weakness</label>
-            <input type="text" id="hero-weakness" name="hero-weakness" required class="form-control" placeholder="Weakness of the hero">
-        </div>
-        <input type="text" hidden id="id" name="id" value="{{id}}">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
 
+            <h2 class="bg-light text-center opacity-100">New Hero</h2>
+            <form action="/hero-squad/add-hero-form" method="POST" style=" border: 2px solid blueviolet;"
+                 class="bg-light p-4 opacity-75">
+                <div class="form-field">
+                    <label class="form-label" for="hero-name">Hero Name</label>
+                    <input type="text" id="hero-name" name="hero-name" required class="form-control">
+                </div>
+                <div class="form-field">
+                    <label class="form-label" for="hero-age">Age (Years)</label>
+                    <input type="number" id="hero-age" name="hero-age" required class="form-control"
+                        placeholder="Age of the hero">
+                </div>
+                <div class="form-field">
+                    <label class="form-label" for="hero-power">Power</label>
+                    <input type="text" id="hero-power" name="hero-power" required class="form-control"
+                        placeholder="Strength of the hero">
+                </div>
+                <div class="form-field">
+                    <label class="form-label" for="hero-weakness">Weakness</label>
+                    <input type="text" id="hero-weakness" name="hero-weakness" required class="form-control"
+                        placeholder="Weakness of the hero">
+                </div>
+                <input type="text" hidden id="id" name="id" value="{{id}}">
 
-        <input type="submit" value="Add Hero">
-    </form>
+                <div class="submit text-center ">
+                    <button class="btn btn-success m-2 opacity-100" >Add Hero</button>
+                </div>
+
+            </form>
+
+        </div>
+        <div class="col-md-3"></div>
+
+    </div>
 {{/partial}}
 
 
