add arrow to point to new form

--- a/src/main/resources/templates/hero-squad.hbs
+++ b/src/main/resources/templates/hero-squad.hbs
@@ -23,7 +23,10 @@
                     </div>
                     {{/each}}
                     {{else}}
-                    <p>No hero squad.Add one!</p>
+                        <h5 class"text-info">
+                            Enlist a squad in the form!
+                            <span class="material-icons text-success"> arrow_foward </span>
+                        </h5>
                     {{/if}}
 
                 </div>
