--- a/src/main/resources/templates/hero-squad.hbs
+++ b/src/main/resources/templates/hero-squad.hbs
@@ -23,7 +23,7 @@
                     </div>
                     {{/each}}
                     {{else}}
-                        <h5 class"text-info">
+                        <h5 class="text-info">
                             Enlist a squad in the form!
                             <span class="material-icons text-success"> arrow_foward </span>
                         </h5>
