--- a/src/main/resources/templates/hero-squad.hbs
+++ b/src/main/resources/templates/hero-squad.hbs
@@ -23,10 +23,12 @@
                     </div>
                     {{/each}}
                     {{else}}
-                        <h5 class="text-info">
+                        <h4 class="" style="color:#6d29ae;">
                             Enlist a squad in the form!
-                            <span class="material-icons text-success"> arrow_foward </span>
-                        </h5>
+                            <span class="material-icons-outlined">
+                            arrow_forward
+                            </span>
+                        </h4>
                     {{/if}}
 
                 </div>
