prevent bad request from a form with invalid squadId

--- a/src/main/resources/templates/hero-squad-detail.hbs
+++ b/src/main/resources/templates/hero-squad-detail.hbs
@@ -34,7 +34,7 @@ u
                         <td>{{power}}</td>
                         <td>{{age}}</td>
                         <td>{{weakness}}</td>
-                        <td> <a href="/heroes/{{id}}/update">Update Hero</a></td>
+                        <td> <a href="/heroes/{{id}}/update"><span class="material-icons-outlined"> mode_edit </span></a></td>
                         <td><a href="/heroes/{{id}}/delete"><span class="material-icons" style="color:red;">delete</span></a></td>
                     </tr>
                 {{/each}}
